--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,7 @@
 	    <script src="/directives/common.js"></script>
         <script src="/controllers/collection.js"></script>
         <script src="/controllers/test.js"></script>
+        <script src="/controllers/project.js"></script>
 	    <script src="/controllers/profile.js"></script>
 	    <script src="/controllers/login.js"></script>
 	    <script src="/modules/growl.js"></script>
