--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,3 +1,4 @@
 <div ng-repeat="project in projects">
-    <h2>{{project.title}}</h2>
+    <h2><a href="/editproject/{{project._id}}">{{project.title}}</a></h2>
+
 </div>
