--- a/public/views/index.html
+++ b/public/views/index.html
@@ -15,6 +15,7 @@
         <script src="/controllers/project.js"></script>
 	    <script src="/controllers/profile.js"></script>
 	    <script src="/controllers/login.js"></script>
+        <script src="/controllers/admin.js"></script>
 	    <script src="/modules/growl.js"></script>
 	    <script src="/modules/core.js"></script>
 
