--- a/public/views/adminpanel.html
+++ b/public/views/adminpanel.html
@@ -23,18 +23,17 @@ Add semester:
     </form>
     <form name="AdminPanelSemester">
         <div class="form-group">
-            <select class="form-control" multiple="multiple" required >
-                <option value="CRIA">CRIA</option>
-                <option value="ADEB">ADEB</option>
+            <select id="semesterSelect" class="form-control" multiple="multiple" required >
+                <option ng-repeat="semester in semesters" value="{{semester._id}}">{{semester.name}}</option>
             </select><br>
             <button type="submit" class="btn btn-default" ng-click="">Add Semester</button>
-            <button type="submit" class="btn btn-default" ng-click="">Remove Semester</button>
-            <button type="submit" class="btn btn-default" ng-click="">Edit Semester</button>
+            <button type="submit" class="btn btn-default" ng-click="removeSemester()">Remove Semester</button>
+            <button type="submit" class="btn btn-default" ng-click="getSemesterData()">Edit Semester</button>
         </div>
     `</form>
 </div>
 
-<div style="border:1px solid red;">
+<div style="border:1px solid green;">
     <form name="Add profile">
         <div class="form-group">
             <label for="addProfile">Add the profile name</label>
@@ -48,7 +47,7 @@ Add semester:
     </form>
 </div>
 
-<div>
+<div style="border:1px solid green">
     <form name="Edit profile">
         <div class="form-group">
             <label for="Profile">Edit the profile name</label>
@@ -62,20 +61,43 @@ Add semester:
     </form>
 </div>
 
-<div style="border:1px solid red">
-    <form name="Edit Semester" >
+<div style="border:1px solid green">
+    <form name="Add Semester" >
         <div class="form-group">
-            <label for="Semestername">Add the Semester name</label>
-            <input type="text" class="form-control" id="Semestername" placeholder="Add the semester name" ng-model="fromDataSemester.name" required>
+            <label for="addSemesterName">Add the Semester name</label>
+            <input type="text" class="form-control" id="addSemesterName" placeholder="Add the semester name" ng-model="formDataSemester.name" required>
         </div>
         <div class="form-group">
-            <label for="Semestername">Add the Semester description</label>
-            <input type="text" class="form-control" id="Semestername" placeholder="Add the semester description" ng-model="fromDataSemester.description" required>
+            <label for="addSemesterDescription">Add the Semester description</label>
+            <input type="text" class="form-control" id="addSemesterDescription" placeholder="Add the semester description" ng-model="formDataSemester.description" required>
         </div>
         <div class="form-group">
-            <label for="Semesterprofile">Add the parent profile</label>
-            <input type="text" class="form-control" id="Semesterprofile" placeholder="Add the parent profile" ng-model="fromDataSemester.profileid" required>
+            <label for="addSemesterProfile">Add the parent profile</label>
+            <select id="addSemesterProfile" class="form-control" ng-model="formDataSemester.profileid" required >
+                <option ng-repeat="profile in profiles" value="{{profile._id}}">{{profile.name}}</option>
+            </select><br>
         </div>
-        <button type="submit" class="btn btn-default" ng-click="">Save</button>
+        <button type="submit" class="btn btn-default" ng-click="addSemester()">Save</button>
     </form>
 </div>
+
+<div style="border:1px solid green">
+    <form name="Edit Semester" >
+        <div class="form-group">
+            <label for="SemesterName">Edit the Semester name</label>
+            <input type="text" class="form-control" id="SemesterName" placeholder="Edit the semester name" ng-model="semester.name" required>
+        </div>
+        <div class="form-group">
+            <label for="SemesterDescription">Edit the Semester description</label>
+            <input type="text" class="form-control" id="SemesterDescription" placeholder="Edit the semester description" ng-model="semester.description" required>
+        </div>
+        <div class="form-group">
+            <label for="SemesterProfile">Edit the parent profile</label>
+            <select id="SemesterProfile" class="form-control" ng-model="semester.profileid"  required >
+                <option ng-repeat="profile in profiles" id="selectSemesterProfile" value="{{profile._id}}">{{profile.name}}</option>
+            </select><br>
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="editSemester()">Save</button>
+    </form>
+</div>
+
