User roles and email check
Check if the email of the user is from the HAN.
Added roles for the users.
Added standard admin user when server starts up.

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -14,7 +14,8 @@
 				<p>
 					<strong>id</strong>: {{ user._id }}<br>
 					<strong>email</strong>: {{ user.local.email }}<br>
-					<strong>password</strong>: {{ user.local.password }}
+					<strong>password</strong>: {{ user.local.password }}<br>
+					<strong>role</strong>: {{ user.role }}
 				</p>
 
 			</container>
