--- a/public/views/adminpanel.html
+++ b/public/views/adminpanel.html
@@ -101,3 +101,29 @@ Add semester:
     </form>
 </div>
 
+<div>
+    <form name="Edit Project">
+        <div class="form-group">
+            <label for="projectSelect">Select the project</label>
+            <select id="projectSelect" class="form-control" multiple="multiple" required >
+                <option ng-repeat="project in projects" value="{{project._id}}">{{project.title}}</option>
+            </select><br>
+            <button type="submit" class="btn btn-default" ng-click="removeProject()">Remove Project</button>
+            <button type="submit" class="btn btn-default" ng-click="getProjectData()">Edit Semester</button>
+        </div>
+        <div class="form-group">
+            <label for="ProjectTitle">Edit the Project Title</label>
+            <input type="text" class="form-control" id="ProjectTitle" placeholder="Edit the project title" ng-model="project.title">
+        </div>
+        <div class="form-group">
+            <label for="content">Add your content</label>
+            <input type="text" class="form-control" id="content" placeholder="Enter the project description" ng-model="project.content" required>
+        </div>
+        <div class="form-group">
+            <label for="grade">Select your grade</label>
+            <input type="range" name="grade" id="grade" value="5" min="0" max="10" step="0.1" ng-model="project.grade">
+            <input type="text" class="form-control" ng-model="project.grade">
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="updateProject()">Save</button>
+    </form>
+</div>
