--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -8,7 +8,7 @@ Votes
 Content (images, videos en text) 
 -->
 
-<div>
+<div class="container">
     <form name="ProjectForm">
         <div class="form-group">
             <label for="title">Project titel</label>
