Modified the profile page and the navigation bar
Some minor changes to home and the custom css file

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,5 @@
-<div class="row full-row">
+<div class="container">
+<div class="row">
 
     <div ng-repeat="project in projects track by $index">
 <!--         <p>{{ $index }}</p> -->
@@ -16,7 +17,7 @@
     </div>
 
 </div>
-<div class="row full-row">
+<div class="row">
 
     <div ng-repeat="project in projects track by $index">
 <!--         <p>{{ $index }}</p> -->
@@ -27,4 +28,5 @@
         </div>
     </div>
 
+</div>
 </div>
