Added a view to edit a profile
Contains the view and included form to edit a profile. Missing the
functionality

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -4,8 +4,9 @@
 </div>
 
 <div class="row">
-    <div class="container text-center">
+    <div class="text-center">
         <button class="btn btn-default" ng-mouseover="show = !show" ng-mouseleave="show = !show">Show Local Information</button>
+        <a href="/editprofile" class="btn btn-default btn-sm">Edit Profile</a>
     </div>
     <!-- LOCAL INFORMATION -->
     <div class="col-sm-12" id="sensitiveInfo" ng-show="show">
