--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,6 +17,7 @@
         <script src="/controllers/test.js"></script>
         <script src="/controllers/project.js"></script>
 	    <script src="/controllers/profile.js"></script>
+        <script scr="/controllers/projectpage.js"></script>
 	    <script src="/controllers/login.js"></script>
         <script src="/controllers/admin.js"></script>
 	    <script src="/modules/growl.js"></script>
