--- a/public/CSS/mainCustom.css
+++ b/public/CSS/mainCustom.css
@@ -19,3 +19,36 @@
 .full-row {
     margin: 0 auto; 
 }
+
+.imagebanner {
+    margin: 0 auto;
+    height:200px;
+    background-color: #428bca;
+}
+
+#footer {
+    background-color: #f5f5f5;
+}
+
+.page-header {
+    height:200px;
+    border-bottom: 1px solid black;
+}
+
+.team-image img{
+    border-radius: 50%;
+    display: inline-block;
+    background-color: green;
+    width:200px;
+    height:200px;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top:350px!important;
+    box-shadow: 0px 0px 15px #888888;
+    border: 1px solid black;
+}
