--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,12 +7,15 @@
             <h3>{{ project.title }}</h3>
             <p>{{ project.content }}</p>
             <p>{{ project.grade }}</p>
+            <p>{{ project.students | json }}</p>
+            <p>{{ project.test }}</p>
         </div>
 
         <div class="col-xs-12 col-md-5 secondAndThirdPlace" ng-show="$index == 1 || $index == 2">
             <h3>{{ project.title }}</h3>
             <p>{{ project.content }}</p>
             <p>{{ project.grade }}</p>
+            <p>{{ project.students | json }}</p>
         </div>
     </div>
 
@@ -25,6 +28,8 @@
             <h3>{{ project.title }}</h3>
             <p>{{ project.content }}</p>
             <p>{{ project.grade }}</p>
+            <p>{{ project.students | json }}</p>
+            <p>{{ project.test }}</p>
         </div>
     </div>
 
