--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html ng-app="app">
     <head>
-        <title>User Authentication</title>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+        <title>ICA Portfolios</title>
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css">
+        <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> -->
         <link rel="stylesheet" href="../CSS/mainCustom.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> -->
+
+        <script src="//cdn.jsdelivr.net/hammerjs/2.0.4/hammer.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.js"></script>
 
         <script src="/factories/httpInterceptor.js"></script>
         <script src="/directives/common.js"></script>
@@ -16,19 +24,11 @@
         <script src="/controllers/home.js"></script>
         <script src="/controllers/test.js"></script>
         <script src="/controllers/project.js"></script>
-<<<<<<< HEAD
-        <script src="/controllers/profile.js"></script>
-        <script src="/controllers/projectpage.js"></script>
-        <script src="/controllers/login.js"></script>
-=======
 	    <script src="/controllers/profile.js"></script>
-        <script scr="/controllers/projectpage.js"></script>
 	    <script src="/controllers/login.js"></script>
->>>>>>> projectPage
         <script src="/controllers/admin.js"></script>
         <script src="/modules/growl.js"></script>
         <script src="/modules/core.js"></script>
-
     </head>
     <body>
         <!--<nav class="navbar navbar-default" role="navigation">
