--- a/public/CSS/mainCustom.css
+++ b/public/CSS/mainCustom.css
@@ -184,6 +184,7 @@
 
 .header-image .project-logo img {
     border-radius: 50%;
+    border: 5px solid white;
 }
 
 /**
@@ -243,3 +244,12 @@
     box-shadow: 0px 0px 15px #888888;
     border: 1px solid black;
 }
+
+.profile-offset {
+    margin-top: 25px;
+}
+
+.description {
+    margin-top: 300px;
+}
+
