--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,29 +1,41 @@
 <div class="page-header text-center">
-	<h1><span class="fa fa-anchor"></span> Profile Page</h1>
-	<a logout href="/logout" class="btn btn-default btn-sm">Logout</a>
+	<div class="header-image row">
+            <img src="http://lorempixel.com/1200/250" alt="">
+            <div class="project-logo">
+                <img src="http://lorempixel.com/200/200" alt="">
+            </div>
+    </div>
 </div>
 
-<div class="row">
+<div class="container">  
+    <div class="layout layout-text-image row description">
+        <div class="text col-xs-12 col-sm-6">
+            <h2>Lorem Pixel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, quae rerum, recusandae fugit incidunt odit vitae non aliquid doloribus sequi pariatur sapiente, ipsa aspernatur unde aperiam quis culpa porro consequatur.</p>
+        </div>
+        <div class="image col-xs-12 col-sm-6">
+            <img src="http://lorempixel.com/400/250">
+        </div>
+    </div>
+</div>
+
+<div class="row profile-offset">
     <div class="text-center">
-        <button class="btn btn-default" ng-mouseover="show = !show" ng-mouseleave="show = !show">Show Local Information</button>
+        <a class="btn btn-default btn-sm" ng-click="show = !show">Show Local Information</a>
         <a href="/editprofile" class="btn btn-default btn-sm">Edit Profile</a>
     </div>
     <!-- LOCAL INFORMATION -->
     <div class="col-sm-12" id="sensitiveInfo" ng-show="show">
     	<div class="well">
     		<h3><span class="fa fa-user"></span>Local</h3>
-
-    		<container ng-show="user.local.email">
+    		<container ng-show="user.email">
     			<p>
     				<strong>id</strong>: {{ user._id }}<br>
-    				<strong>email</strong>: {{ user.local.email }}<br>
-    				<strong>password</strong>: {{ user.local.password }}<br>
+    				<strong>email</strong>: {{ user.email }}<br>
+    				<strong>password</strong>: {{ user.password }}<br>
     				<strong>role</strong>: {{ user.role }}
     			</p>
-
     		</container>
-
     	</div>
     </div>
-
 </div>
