--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,6 +18,7 @@
         <script src="/controllers/home.js"></script>
         <script src="/controllers/test.js"></script>
         <script src="/controllers/project.js"></script>
+        <script src="/controllers/image.js"></script>
 	    <script src="/controllers/profile.js"></script>
 	    <script src="/controllers/login.js"></script>
         <script src="/controllers/admin.js"></script>
