--- a/public/views/editprofile.html
+++ b/public/views/editprofile.html
@@ -1,8 +1,9 @@
 <div class="container">
     <form name="ProfileForm">
+    <p>ID: {{user._id}}</p>
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your Name">
+            <input type="text" class="form-control" id="name" value="{{user.name}}">
         </div>
         <div multiple class="form-group">
             <label for="profileSelect">What Profile have you chosen?</label>
@@ -22,11 +23,16 @@
         </div>
         <div class="form-group">
             <label for="content">Tell something about yourself</label>
-            <input type="text" class="form-control" id="content" placeholder="">
+            <input type="text" class="form-control" id="content" value="{{user.description}}">
         </div>
         <div class="form-group">
             <label for="content">What are your skills?</label>
             <input type="text" class="form-control" id="content" placeholder="">
+        </div>
+        <div class="form-group">
+            <span>Cover Photo</span><input type="file" class="filestyle" data-input="false">
+            <span>Profile Picture</span><input type="file" class="filestyle" data-input="false">
+            <span>Other pictures</span><input type="file" class="filestyle" data-input="false">
         </div>
         <a href="/profile" class="btn btn-default" >Cancel</a>
     </form>
