Added module "pages", footer and about page
Added html and module to add general info pages

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,6 +16,7 @@
         <script src="/directives/common.js"></script>
         <script src="/controllers/collection.js"></script>
         <script src="/controllers/home.js"></script>
+        <script src="/controllers/pages.js"></script>
         <script src="/controllers/test.js"></script>
         <script src="/controllers/project.js"></script>
         <script src="/controllers/image.js"></script>
@@ -72,31 +73,19 @@
 
         </div>
 
-        <div class="menu-side">
-            <div class="layout-item add-layout-image">
-                <i class="fa fa-picture-o"></i>
+        <footer class="footer">
+            <div class="container text-center">
+                <div class="col-sm-4">
+                    <h3>Contact</h3>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Terms of Service</h3>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Logos</h3>
+                </div>              
             </div>
-
-            <hr>
-
-            <div class="layout-item add-layout-text-image">
-                <i class="fa fa-align-left"></i>
-                <i class="fa fa-picture-o"></i>
-            </div>
-
-            <hr>
-
-            <div class="layout-item add-layout-image-text">
-                <i class="fa fa-picture-o"></i>
-                <i class="fa fa-align-left"></i>
-            </div>
-
-            <hr>
-
-            <div class="layout-item add-layout-video">
-                <i class="fa fa-video-camera"></i>
-            </div>
-        </div>
+        </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
