--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,6 +1,6 @@
 <!-- Change pictures to angular -->
 <div class="page-header text-center">
-	<div class="header-image row">
+	<div class="header-image">
             <img src="http://lorempixel.com/1200/250" alt="">
             <div class="project-logo">
                 <img src="http://lorempixel.com/200/200" alt="">
