--- a/public/CSS/mainCustom.css
+++ b/public/CSS/mainCustom.css
@@ -187,6 +187,34 @@
     border: 5px solid white;
 }
 
+/*About page
+*/
+.title {
+    margin-top:60px; 
+}
+.round-logo img {
+    position: absolute;
+    border-radius: 50%;
+    left: calc(50% - 100px);
+    margin-top: -120px
+}
+
+.inner-image img {
+    margin-top: 145px; 
+    left: calc(50% - 100px);
+    top: calc(100% - 135px);
+}
+
+.inner-text  {
+    margin-top: 50px;
+    padding-right: 125px;
+    padding-left: 125px;
+}
+
+.about-container {
+    margin-top:150px; 
+    border: 1px solid #e7e7e7;
+}
 /**
  * Other stuff
  */
@@ -218,13 +246,10 @@
     background-color: #428bca;
 }
 
-#footer {
-    background-color: #f5f5f5;
-}
 
-.page-header {
-    height:200px;
-    border-bottom: 1px solid black;
+.footer {
+    color: white;
+    background: #252525;
 }
 
 .team-image img{
@@ -240,16 +265,9 @@
     left: 0;
     right: 0;
     margin: auto;
-    margin-top:350px!important;
-    box-shadow: 0px 0px 15px #888888;
-    
+    margin-top:350px!important;    
 }
 
-.profile-offset {
-    margin-top: 25px;
+.page-header {
+    border: none;
 }
-
-.description {
-    margin-top: 300px;
-}
-
