--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,37 +1,39 @@
-<div class="container">
-<div class="row">
+<!-- <div class="row full-row">
 
     <div ng-repeat="project in projects track by $index">
-<!--         <p>{{ $index }}</p> -->
-        <div class="col-xs-12 col-md-7 firstPlace" ng-show="$index == 0">
-            <h3>{{ project.title }}</h3>
-            <p>{{ project.content }}</p>
-            <p>{{ project.grade }}</p>
-            <p>{{ project.students | json }}</p>
-            <p>{{ project.test }}</p>
-        </div>
-
-        <div class="col-xs-12 col-md-5 secondAndThirdPlace" ng-show="$index == 1 || $index == 2">
-            <h3>{{ project.title }}</h3>
-            <p>{{ project.content }}</p>
-            <p>{{ project.grade }}</p>
-            <p>{{ project.students | json }}</p>
+        <div class="col-xs-12 col-md-12 winner" ng-show="$index == 0 || $index == 1 || $index == 2">
+                <div class="text-page-silder">
+                <h3>{{ project.title }}</h3>
+                <p>{{ project.content }}</p>
+                <p>{{ project.grade }}</p>
+                <p>{{ project.students | json }}</p>
+                <p>{{ project.test }}</p>
+                </div>
+            
         </div>
     </div>
 
-</div>
-<div class="row">
+</div> -->
 
+<div class="row full-row">
     <div ng-repeat="project in projects track by $index">
 <!--         <p>{{ $index }}</p> -->
-        <div class="col-xs-12 col-md-12 unplaced" ng-show="$index > 2">
-            <h3>{{ project.title }}</h3>
-            <p>{{ project.content }}</p>
-            <p>{{ project.grade }}</p>
-            <p>{{ project.students | json }}</p>
-            <p>{{ project.test }}</p>
+        <div class="col-xs-12 col-md-4" ng-show="$index == 0 || $index > 0">
+            <div class="unplaced">
+                <div class="page-info">
+                   <h3>{{ project.title }}</h3> 
+                </div>
+                <!-- <p>{{ project.content }}</p>
+                <p>{{ project.grade }}</p>
+                <p>{{ project.students | json }}</p>
+                <p>{{ project.test }}</p> -->
+            </div>
         </div>
     </div>
-
 </div>
+
+<div class="view-more">
+    <a href="/projects">
+        <button type="button" class="btn btn-default btn-lg">VIEW MORE</button>
+    </a>
 </div>
