--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -1,4 +1,64 @@
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <form id="imageform" enctype="multipart/form-data"> 
+
+                    <h2>Upload Image</h2>
+
+                    <div>
+                        <label for="inputImage">Image</label>
+                        <input id="inputImage" type="file" accept="image/*" name="image">
+
+                        <img ng-show="image" ng-src="{{ image.url }}" type="{{ image.file.type }}">
+                        <button uploadimageform type="submit">Add</button>
+                        <button type="reset">Clear</button>
+                    </div>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="menu-side">
+    
+    <div class="layout-item add-layout-image">
+        <i class="fa fa-picture-o"></i>
+    </div>
+
+    <hr>
+
+    <div class="layout-item add-layout-text-image">
+        <i class="fa fa-align-left"></i>
+        <i class="fa fa-picture-o"></i>
+    </div>
+
+    <hr>
+
+    <div class="layout-item add-layout-image-text">
+        <i class="fa fa-picture-o"></i>
+        <i class="fa fa-align-left"></i>
+    </div>
+
+    <hr>
+
+    <div class="layout-item add-layout-video">
+        <i class="fa fa-video-camera"></i>
+    </div>
+
+</div>
+
 <div class="menu-side-right">
+    
     <form name="ProjectForm">
 
         <div class="form-group">
@@ -31,24 +91,34 @@
         <button type="submit" class="btn btn-default" ng-click="addProject()">Save</button>
 
     </form>
+
 </div>
 
-<div class="container">
 
-    <div id="project-content">
-        <div class="header-image row">
+<div id="project-content">
+
+    <div class="page-header text-center ng-scope">
+        <div class="header-image">
             <img src="http://lorempixel.com/1200/250" alt="">
             <div class="project-logo">
                 <img src="http://lorempixel.com/200/200" alt="">
             </div>
         </div>
-        <div class="project-layouts" id="project-layouts">
-        </div>
-        <div class="project-students" id="project-students">
-        </div>
     </div>
+
+    <div class="container">
     
-</div><!-- end container -->
+        <div class="project-layouts" id="project-layouts">
+        
+        </div>
+        
+        <div class="project-students" id="project-students">
+        
+        </div>
+
+    </div><!--end container -->
+
+</div><!-- end project-content -->
 
 <a menuside href="#" class="menu-toggle pull-left">Toggle Menu</a>
 <a menusideright href="#" class="menu-toggle-right pull-right">Toggle Menu Right</a>
